# glm_xgboost

./: .gitignore  PIPELINE_GUIDE.md  complete_pipeline.py  pyproject.toml  run_pipeline.py
01_eda/: explore_data.py  quick_eda.py
02_preprocessing/: data_preprocessing.py
03_glm_model/: glm_modeling.py
04_xgboost_model/: xgboost_modeling.py
05_model_comparison/: compare_models.py
06_interpretability/: local_interpretability.py
07_final_results/: executive_summary.txt  final_documentation.py  modeling_guidelines_compliance.txt  project_summary.txt  technical_documentation.txt
notebooks/: complete_pipeline.ipynb
